--- a/readme.adoc
+++ b/readme.adoc
@@ -1,6 +1,6 @@
 In the interest of dressing up terminal based applications like Git and Vim in matching colors, but also to make life easier when it comes to setting up a new workstation, it helps having the color scheme defined in one place: your *terminal emulator preference panel*.
 
-With `git-config` the `https://git-scm.com/docs/git-config#Documentation/git-config.txt-colorui[color.ui]` default is `auto` and for Vim it's possible to use https://jeffkreeftmeijer.com/vim-16-color/#terminal-colors-and-ansi-escape-sequences[number variables] for each of the base 16 colors instead of https://github.com/chriskempson/base16-vim/blob/master/colors/base16-eighties.vim#L17[harcoding their values] in your theme. And Vim `:highlight` makes it easy to experiment inline before investing,
+With `git-config` the `https://git-scm.com/docs/git-config#Documentation/git-config.txt-colorui[color.ui]` default is `auto`. In Vim it's possible to use https://jeffkreeftmeijer.com/vim-16-color/#terminal-colors-and-ansi-escape-sequences[numeric pointers] for each of the base 16 colors instead of https://github.com/chriskempson/base16-vim/blob/master/colors/base16-eighties.vim#L17[harcoding their values] in script. And Vim `:highlight` allows for experimenting inline before investing,
 
 ```vim
 " No color, no background, no nothing
