--- a/readme.adoc
+++ b/readme.adoc
@@ -18,7 +18,7 @@ let s:blue = "ctermfg=4 ctermbg=NONE cterm=NONE"
 :hi Normal s:blue " Expect linked `javaScript` to reflect changes
 ```
 
-Then it's a case of figuring out respective https://jordanelver.co.uk/blog/2015/05/27/working-with-vim-colorschemes/#showing-highlight-groups[highlight groups] and how they fit together with each language syntax. But font styling is also possible, using *bold* or __underlined__ text for example.
+Then it's a case of figuring out respective https://jordanelver.co.uk/blog/2015/05/27/working-with-vim-colorschemes/#showing-highlight-groups[highlight groups] and how they fit together with each language syntax. But font styling is also possible, using *bold* or <ins>underlined</ins> text for example.
 
 image::https://i.imgur.com/Zfu6Z53.png[Vim color preview]
 
